--- a/views/faverate.ejs
+++ b/views/faverate.ejs
@@ -9,15 +9,15 @@
                 </p>
                 <p>
                     <span>好评率：</span>
-                    <span>{{commission_num/100}}%</span>
+                    <span>99%</span>
                 </p>
                 <p>
                     <span>宝贝数：</span>
-                    <span>{{volume}}</span>
+                    <span>{{num}}</span>
                 </p>
                 <p>
                     <span>最近更新：</span>
-                    <span></span>
+                    <span>{{list_time}}</span>
                 </p>
             </div>
             <div style="clear:both"></div>
@@ -57,6 +57,7 @@
 <style>
 .ui-controlgroup-controls{width:100%;}
 .ui-content{background-color: #e7e7e7;}
+.shop-list-name{position:absolute;bottom:0;left:0;width:256px;height:30px;line-height:30px;color:#fff;text-align:center;background-color:#000;opacity:.7;}
 </style>
         <div data-role="header">
             <div data-role="controlgroup" data-type="horizontal">
@@ -67,20 +68,29 @@
         
         <div data-role="content">
             <ul class="shop-list-ul">
-                <li class="shop-list-li clearfix">
-                    <a href="#" style="display:block;width:256px;height:256px;">
-                        <img src="http://temp.im/256x256" />
+                <li class="shop-list-li clearfix" style="position:relative;">
+                    <a href="http://shop58844694.m.taobao.com/?sid=78662d22cdb83b83" style="display:block;width:256px;height:256px;">
+                        <img src="http://q.i02.wimg.taobao.com/bao/uploaded/97/19/T15zeGXixhXXaCwpjX_128x128.jpg" style="width:256px;height:256px;border-radius:8px;" />
                     </a>
+                    <div class="shop-list-name">
+                        法国雷洛隆久发直营店
+                    </div>
                 </li>
-                <li class="shop-list-li clearfix">
-                    <a href="#" style="display:block;width:256px;height:256px;">
-                        <img src="http://temp.im/256x256" />
+                <li class="shop-list-li clearfix" style="position:relative;">
+                    <a href="http://baixingdq.m.tmall.com/?sid=da2ed8366d0357c0" style="display:block;width:256px;height:256px;">
+                        <img src="http://q.i01.wimg.taobao.com/bao/uploaded/8d/42/T1rwLgXm8uXXb1upjX_128x128.jpg" style="width:256px;height:256px;border-radius:8px;" />
                     </a>
+                    <div class="shop-list-name">
+                        百兴电器专营店
+                    </div>
                 </li>
-                <li class="shop-list-li clearfix">
-                    <a href="#" style="display:block;width:256px;height:256px;">
-                        <img src="http://temp.im/256x256" />
+                <li class="shop-list-li clearfix" style="position:relative;">
+                    <a href="http://dacom.m.tmall.com/?sid=da2ed8366d0357c0" style="display:block;width:256px;height:256px;">
+                        <img src="http://q.i04.wimg.taobao.com/bao/uploaded/0a/a3/T1y_nTXoNoXXb1upjX_128x128.jpg" style="width:256px;height:256px;border-radius:8px;" />
                     </a>
+                    <div class="shop-list-name">
+                        dacom旗舰店
+                    </div>
                 </li>
             </ul>
         </div>
