--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -131,7 +131,7 @@ body {
 #goods .shop-list-ul{margin:0;background-color:#e7e7e7;padding:10px;}
 #goods .shop-list-li{list-style:none;margin:10px 20px;}
 #goods .shop-logo{width:64px;height:64px;overflow:hidden;border-radius:4px;margin-right:10px;margin-top: 5px;float:left;}
-#goods .shop-info{line-height:12px;float:left;}
+#goods .shop-info{line-height:12px;float:left;width:180px;}
 #goods .shop-name-link{font-size:12px;color:#444;}
 #goods .shop-info span{font-size:10px;color:#666;}
 #goods .shop-info p{margin:5px 0;}
