添加了一个iframe

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,7 @@
 <% include setting %>
 <% include mypush %>
 <% include itemdetail %>
+<% include taobao %>
 <input type="hidden" id="itemId" value="">
 
 </body>
