--- a/views/itemdetail.ejs
+++ b/views/itemdetail.ejs
@@ -2,7 +2,7 @@
     <div data-role="header" data-position="fixed">
         <a data-rel="back">返回</a>
         <h1>宝贝详情</h1>
-        <a href="{{href}}">购买</a>
+        <a href="#taobaodetail" data-transition="slide">购买</a>
     </div>
     <div data-role="navbar" data-iconpos="right">
         <ul>
@@ -12,7 +12,7 @@
                 </a>
             </li>
             <li>
-                <a href="#comment" data-transition="none" data-theme="">
+                <a href="#comment" data-transition="slide" data-theme="">
                     评价
                 </a>
             </li>
@@ -28,7 +28,9 @@
 <div class="ui-grid-a">
     <div class="ui-block-a">
         <div style="width: 120px;height: 120px">
+            <a href="{{item.wap_detail_url}}" data-transition="slide">
             <img src="{{item.pic_url}}" alt="image" width="120">
+            </a>
         </div>
     </div>
     <div class="ui-block-b">
@@ -40,8 +42,8 @@
 <div>
     <h5>您喜欢吗？</h5>
     <div data-role="controlgroup" data-type="horizontal" class="ui-corner-all ui-controlgroup ui-controlgroup-horizontal"><div class="ui-controlgroup-controls">
-        <a href="#" data-role="button" data-icon="heart" data-theme="e" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" class="ui-btn ui-btn-up-e ui-btn-icon-left ui-corner-left"><span class="ui-btn-inner ui-corner-left"><span class="ui-btn-text">+1</span><span class="ui-icon ui-icon-heart ui-icon-shadow">&nbsp;</span></span></a>
-        <a href="#" data-role="button" data-icon="heart" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" data-theme="c" class="ui-btn ui-btn-up-c ui-btn-icon-left ui-corner-right ui-controlgroup-last"><span class="ui-btn-inner ui-corner-right ui-controlgroup-last"><span class="ui-btn-text">-1</span><span class="ui-icon ui-icon-heart ui-icon-shadow">&nbsp;</span></span></a>
+        <a href="#" data-role="button" data-icon="heart" data-theme="e" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" class="ui-btn ui-btn-up-e ui-btn-icon-left ui-corner-left like"><span class="ui-btn-inner ui-corner-left"><span class="ui-btn-text">+1</span><span class="ui-icon ui-icon-heart ui-icon-shadow">&nbsp;</span></span></a>
+        <a href="#" data-role="button" data-icon="heart" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" data-theme="c" class="ui-btn ui-btn-up-c ui-btn-icon-left ui-corner-right ui-controlgroup-last hate"><span class="ui-btn-inner ui-corner-right ui-controlgroup-last"><span class="ui-btn-text">-1</span><span class="ui-icon ui-icon-heart ui-icon-shadow">&nbsp;</span></span></a>
     </div></div>
 </div>
 <hr>
@@ -81,7 +83,7 @@
     <div data-role="header" data-position="fixed">
         <a data-rel="back">返回</a>
         <h1>宝贝详情</h1>
-        <a href="{{href}}">购买</a>
+        <a href="#taobaodetail" data-transition="slide">购买</a>
     </div>
     <div data-role="navbar" data-iconpos="right">
         <ul>
@@ -91,7 +93,7 @@
                 </a>
             </li>
             <li>
-                <a href="#" data-transition="none" class="ui-btn-active ui-state-persist">
+                <a href="#" data-transition="slide" class="ui-btn-active ui-state-persist">
                     评价
                 </a>
             </li>
