--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -6,7 +6,7 @@
 
     <div data-role="content">
         <ul data-role="listview" data-inset="true">
-            <li><a href="#mypush" data-transition="slide">我的推送 <span class="ui-li-count">0</span></a></li>
+            <li><a href="#mypush" data-transition="slide">我的推送设置 <span class="ui-li-count">0</span></a></li>
         </ul>
 
         <ul data-role="listview" data-inset="true">
