--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,17 +1,6 @@
-
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8" />
-<title>手机淘宝网 -  会员登录 </title>
-<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
-<meta content="yes" name="apple-mobile-web-app-capable" />
-<meta content="black" name="apple-mobile-web-app-status-bar-style" />
-<meta name="format-detection" content="telephone=no" />
+<div id="login" data-role="page">
 <link rel="stylesheet" type="text/css" href="http://a.tbcdn.cn/mw/base/styles/component.css?v=2075723587" />
     <link rel="stylesheet" type="text/css" href="http://a.tbcdn.cn/mw/app/mytaobao/h5/css/login.css?v=0" />
-</head>
-<body scroll="none" >
 <div id="tbh5v0">
 <div class="screen-wrap fullscreen login">
 <header id="header">
@@ -63,5 +52,4 @@
 </footer>
    </div>
     </div>
-</body>
-</html>
+</div>
