--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
 </head>
 <body>
 <% include first %>
+<% include login %>
 <% include msg %>
 <% include faverate %>
 <% include list %>
@@ -23,6 +24,7 @@
 <% include mypush %>
 <% include itemdetail %>
 <% include taobao %>
+<% include author %>
 <input type="hidden" id="itemId" value="">
 
 </body>
