--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -6,13 +6,13 @@
 
     <div data-role="content">
         <ul data-role="listview" data-inset="true">
-            <li><a href="#mypush" data-transition="slide">我的推送设置 <span class="ui-li-count">0</span></a></li>
+            <li><a href="#mypush" data-transition="slide">我的推送设置</a></li>
         </ul>
 
         <ul data-role="listview" data-inset="true">
             <li><a href="#">去给我们打个分，评价一把</a></li>
             <li><a href="#">帮助和反馈</a></li>
-            <li><a href="#">作者信息</a></li>
+            <li><a href="#author" data-transition="flip">作者信息</a></li>
         </ul>
 
         <a href="#" data-role="button" data-theme="e">退出登录</a>
