--- a/views/faverate.ejs
+++ b/views/faverate.ejs
@@ -28,14 +28,13 @@
 .ui-controlgroup-controls{width:100%;}
 .ui-content{background-color: #e7e7e7;}
 </style>
-    <div data-role="header">
-        <div data-role="controlgroup" data-type="horizontal">
-            <a href="#goods" data-role="button">宝贝</a>
-            <a href="#shop" data-role="button" style="float:right">店铺</a>
-        </div>
+    <div data-role="header" data-position="fixed">
+        <a href="#" data-role="button">宝贝</a>
+        <h1>我的收藏</h1>
+        <a href="#shop" data-role="button" style="float:right">店铺</a>
     </div>
 
-<div data-role="content" style="height:475px;background-color:#E7E7E7;">
+<div data-role="content" style="background-color:#E7E7E7;">
     <ul id="J_GoodsList" class="shop-list-ul">
         
     </ul>
@@ -59,13 +58,12 @@
 .ui-content{background-color: #e7e7e7;}
 .shop-list-name{position:absolute;bottom:0;left:0;width:256px;height:30px;line-height:30px;color:#fff;text-align:center;background-color:#000;opacity:.7;}
 </style>
-        <div data-role="header">
-            <div data-role="controlgroup" data-type="horizontal">
-                <a href="#goods" data-role="button">宝贝</a>
-                <a href="#shop" data-role="button" style="float:right">店铺</a>
-            </div>
+        <div data-role="header" data-position="fixed">
+            <a href="#goods" data-role="button">宝贝</a>
+            <h1>我的收藏</h1>
+            <a href="#" data-role="button" style="float:right">店铺</a>
         </div>
-        
+
         <div data-role="content">
             <ul class="shop-list-ul">
                 <li class="shop-list-li clearfix" style="position:relative;">
