--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,7 @@
 <% include itemdetail %>
 <% include taobao %>
 <% include author %>
+<% include more %>
 <input type="hidden" id="itemId" value="">
 
 </body>
