--- a/views/itemdetail.ejs
+++ b/views/itemdetail.ejs
@@ -49,9 +49,9 @@
 <div>
     <h5>关注和提醒</h5>
     <div data-role="controlgroup" data-type="horizontal" class="ui-corner-all ui-controlgroup ui-controlgroup-horizontal"><div class="ui-controlgroup-controls">
-        <a href="#" data-role="button" data-icon="dollar" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" data-theme="c" class="ui-btn ui-btn-up-c ui-btn-icon-left ui-corner-left"><span class="ui-btn-inner ui-corner-left"><span class="ui-btn-text">价格</span><span class="ui-icon ui-icon-dollar ui-icon-shadow">&nbsp;</span></span></a>
-        <a href="#" data-role="button" data-icon="chat" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" data-theme="c" class="ui-btn ui-btn-icon-left ui-btn-up-c"><span class="ui-btn-inner"><span class="ui-btn-text">差评</span><span class="ui-icon ui-icon-chat ui-icon-shadow">&nbsp;</span></span></a>
-        <a href="#" data-role="button" data-icon="gear" data-iconpos="right" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" data-theme="c" class="ui-btn ui-btn-up-c ui-btn-icon-right ui-corner-right ui-controlgroup-last"><span class="ui-btn-inner ui-corner-right ui-controlgroup-last"><span class="ui-btn-text">更多</span><span class="ui-icon ui-icon-gear ui-icon-shadow">&nbsp;</span></span></a>
+        <a href="#" data-role="button" data-icon="dollar" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" data-theme="c" class="ui-btn ui-btn-up-c ui-btn-icon-left ui-corner-left see_price"><span class="ui-btn-inner ui-corner-left"><span class="ui-btn-text">价格</span><span class="ui-icon ui-icon-dollar ui-icon-shadow">&nbsp;</span></span></a>
+        <a href="#" data-role="button" data-icon="chat" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" data-theme="c" class="ui-btn ui-btn-icon-left ui-btn-up-c"><span class="ui-btn-inner see_comment"><span class="ui-btn-text">差评</span><span class="ui-icon ui-icon-chat ui-icon-shadow">&nbsp;</span></span></a>
+        <a href="#more" data-transition="flip" data-role="button" data-icon="gear" data-iconpos="right" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" data-theme="c" class="ui-btn ui-btn-up-c ui-btn-icon-right ui-corner-right ui-controlgroup-last"><span class="ui-btn-inner ui-corner-right ui-controlgroup-last"><span class="ui-btn-text">更多</span><span class="ui-icon ui-icon-gear ui-icon-shadow">&nbsp;</span></span></a>
     </div></div>
 </div>
 <div>
