--- a/views/msg.ejs
+++ b/views/msg.ejs
@@ -4,9 +4,9 @@
         </div>
         <div class="info">
             <ul>
-                <li class="unread">未读信息<span>10</span></li>
-                <li class="fav">收藏店铺<span>10</span></li>
-                <li class="fav">收藏宝贝<span>10</span></li>
+                <li class="unread">未读信息<span>0</span></li>
+                <li class="fav"><a href="#shop" style="color: #666;text-decoration: none;" data-transition="slide">收藏店铺<span>10</span></a></li>
+                <li class="fav"><a href="#goods" style="color: #666;text-decoration: none;" data-transition="slide">收藏宝贝<span>10</span></a></li>
             </ul>
             <img class="user" src="http://wwc.taobaocdn.com/avatar/getAvatar.do?userNick=%d5%c5%cd%a6&width=80&height=80&type=sns" width="150" height="150">
         </div>
