--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,5 +1,5 @@
 <div data-role="page" id="list">
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
         <h1>逛一逛</h1>
     </div>
 
