--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,6 @@
 <% include author %>
 <% include more %>
 <input type="hidden" id="itemId" value="">
-
+<input type="hidden" id="userName" value="">
 </body>
 </html>
