--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -15,7 +15,7 @@
             <li><a href="#author" data-transition="flip">作者信息</a></li>
         </ul>
 
-        <a href="#" data-role="button" data-theme="e">退出登录</a>
+        <a href="#" data-role="button" data-theme="e" class="logout">退出登录</a>
     </div>
     <div data-role="footer" class="nav-glyphish" data-position="fixed" data-id="myfooter">
         <div data-role="navbar" class="nav-glyphish">
