--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,11 +18,11 @@
 <fieldset>
                     <div class="field username">
                         <div class="c-form-search">
-                          <input type="text" name="TPL_username" id="J_UserNameTxt"   placeholder="会员名" value="" />
+                          <input type="text" name="TPL_username" id="J_UserNameTxt"   placeholder="会员名" value="xj032085" />
                         </div>
                     </div>
                     <div class="field pwd">
-                        <input  type="password" name="TPL_password" id="J_PassWordTxt"  placeholder="密码"  class="c-form-txt-normal" />
+                        <input  type="password" name="TPL_password" id="J_PassWordTxt"  placeholder="密码"  class="c-form-txt-normal" value="123456"/>
                     </div>
                     <div class="field submit-btn">
                         <input type="submit" id="J_LoginBtn" class="c-btn-oran-big" value="登 录"/>
