--- a/views/msg.ejs
+++ b/views/msg.ejs
@@ -26,12 +26,12 @@
             <li>
                 <img src="http://img06.taobaocdn.com/bao/uploaded/i6/T1jdLZXlpdXXc68qPX_114239.jpg_100x100.jpg"/>
                 <div class="detail-wrap">
-                    <h4>xx家店铺有更新</h4>
+                    <h4>陌儿旗舰店 店铺有更新</h4>
                     <div class="detail shopdetail clearfix">
-                        <img src="http://img06.taobaocdn.com/bao/uploaded/i6/T1jdLZXlpdXXc68qPX_114239.jpg_100x100.jpg" />
-                        <img src="http://img06.taobaocdn.com/bao/uploaded/i6/T1jdLZXlpdXXc68qPX_114239.jpg_100x100.jpg" />
-                        <img src="http://img06.taobaocdn.com/bao/uploaded/i6/T1jdLZXlpdXXc68qPX_114239.jpg_100x100.jpg" />
-                        <img src="http://img06.taobaocdn.com/bao/uploaded/i6/T1jdLZXlpdXXc68qPX_114239.jpg_100x100.jpg" />
+                        <img src="http://img01.taobaocdn.com/bao/uploaded/i1/T1K6_HXXhnXXaS9I2b_093407.jpg_100x100.jpg" />
+                        <img src="http://img02.taobaocdn.com/bao/uploaded/i2/16862030505088083/T1fGESXmNdXXXXXXXX_!!0-item_pic.jpg_100x100.jpg" />
+                        <img src="http://img02.taobaocdn.com/bao/uploaded/i2/T1f2f7XXXdXXaQmv2a_121135.jpg_100x100.jpg" />
+                        <img src="http://img01.taobaocdn.com/bao/uploaded/i1/T1qxv4XllgXXcAhmoY_030503.jpg_100x100.jpg" />
                     </div>
                 </div>
             </li>
