--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -84,11 +84,16 @@ body {
 #msg .msg-main img {
     width: 50px;
     height: 50px;
+    border-radius: 3px;
 }
 
 #msg .msg-main .detail-wrap {
     margin-left: 70px;
-    margin-top: -60px;
+    margin-top: -40px;
+}
+
+#msg .msg-main .detail-wrap h4 {
+    line-height: 24px;
 }
 
 #msg .msg-main .detail {
