测试机器分辨率

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,7 +8,7 @@
 
         </ul>
     </div>
-    <div data-role="footer" class="nav-glyphish" data-position="fixed" data-id="myfooter">
+    <div data-role="footer" class="nav-glyphish" data-position="fixed" data-id="myfooter" style="bottom:20px">
         <div data-role="navbar" class="nav-glyphish">
             <ul>
                 <li><a href="#msg" data-icon="custom" class="msg">消息中心</a></li>
