--- a/views/msg.ejs
+++ b/views/msg.ejs
@@ -37,7 +37,7 @@
             </li>
         </ul>
     </div>
-    <div data-role="footer" class="nav-glyphish" data-position="fixed" data-id="myfooter">
+    <div data-role="footer" class="nav-glyphish" data-position="fixed" data-id="myfooter" style="bottom:20px">
         <div data-role="navbar" class="nav-glyphish">
             <ul>
                 <li><a href="#" data-icon="custom" class="msg ui-btn-active ui-state-persist">消息中心</a></li>
