--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -17,7 +17,7 @@
 
         <a href="#" data-role="button" data-theme="e" class="logout">退出登录</a>
     </div>
-    <div data-role="footer" class="nav-glyphish" data-position="fixed" data-id="myfooter">
+    <div data-role="footer" class="nav-glyphish" data-position="fixed" data-id="myfooter" style="bottom:20px">
         <div data-role="navbar" class="nav-glyphish">
             <ul>
                 <li><a href="#msg" data-icon="custom" class="msg">消息中心</a></li>
