--- a/views/list.ejs
+++ b/views/list.ejs
@@ -21,7 +21,7 @@
     <textarea class="listTemplate" style="display:none">
         {{#items}}
         <li class="shop-list-li clearfix">
-            <div class="shop-logo"><a href="#itemdetail" data-itemid="{{num_iid}}" data-transition="slide"><img src="{{pic_url}}" width=64 height=64 /></a></div>
+            <div class="shop-logo"><a href="#itemdetail" data-transition="slide"><img src="{{pic_url}}" width=64 height=64 data-itemid="{{num_iid}}" /></a></div>
             <div class="shop-info">
                 <p>
                     <a class="shop-name-link" href="#itemdetail" data-itemid="{{num_iid}}" data-transition="slide">{{title}}</a>
