--- a/views/first.ejs
+++ b/views/first.ejs
@@ -1,3 +1,3 @@
 <div data-role="page" id="first">
-    <img src="/images/first.png" alt="" style="width: 320px;height: 480px;">
+    <img src="/images/first.png" alt="" style="width: 320px">
 </div>
